# arkanoid

./: .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
src/arkanoid/: app.py  ball.py  brick.py  paddle.py
tests/: test_arkanoid.py
